<resources>
    <string name="app_name">Noticias</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">LOGIN</string>
    <string name="Btn_Registro">REGISTRO</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreET">Nombres</string>
    <string name="CorreoET">Correo electronico</string>
    <string name="ContraseñaET">Contraseña</string>
    <string name="ConfirmarContraseñaET">Confirmar contraseña</string>
    <string name="RegistrarUsuario">REGISTRAR</string>
    <string name="TengoUnaCuentaTXT">Tengo una cuenta</string>
    <string name="GeneroRg">Genero</string>
    <string name="MasculinoRb">Masculino</string>
    <string name="FemeninoRb">Femenino</string>


    <!--MENU PRINCIPAL-->
    <string name="CerrarSesion">Salir</string>
    <string name="BienvenidoPrincipal">Bienvenid@</string>
    <string name="NombrePrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>


</resources>